Add CreateProfileReply and AutoEmbed group permissions. Log profile reply deletions in the moderator log. Split the global permissions in the UI to make them easier to manage. Experiment with showing group ID in group edit header. Avoid loading groups multiple times for the same profile reply.
Initialise disabled IP log points to empty string rather than 0.

Add CreateProfileReply perm phrase.
Add AutoEmbed perm phrase.
Add panel_group_mod_permissions phrase.
Add panel_logs_mod_action_profile_reply_delete phrase.

--- a/templates/panel_group_edit_perms.html
+++ b/templates/panel_group_edit_perms.html
@@ -4,7 +4,7 @@
 <main class="colstack_right">
 {{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
+		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}} - #{{.ID}}</h1></div>
 	</div>
 	<form action="/panel/groups/edit/perms/submit/{{.ID}}?s={{.CurrentUser.Session}}" method="post">
 	{{if .CurrentUser.Perms.EditGroupLocalPerms}}
@@ -33,6 +33,29 @@
 	</div>
 	<div class="colstack_item rowlist formlist the_form panel_group_perms">
 		{{range .GlobalPerms}}
+		<div class="formrow">
+			<div class="formitem">
+				<a>{{.LangStr}}</a>
+				<div class="to_right">
+					<select name="perm-{{.Name}}">
+						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
+					</select>
+				</div>
+			</div>
+		</div>
+		{{end}}
+		<div class="formrow">
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_group_update_button"}}</button></div>
+		</div>
+	</div>
+	{{end}}
+	{{if .CurrentUser.Perms.EditGroupGlobalPerms}}
+	<div class="colstack_item colstack_head">
+		<div class="rowitem"><h1>{{lang "panel_group_mod_permissions"}}</h1></div>
+	</div>
+	<div class="colstack_item rowlist formlist the_form panel_group_perms">
+		{{range .ModPerms}}
 		<div class="formrow">
 			<div class="formitem">
 				<a>{{.LangStr}}</a>
