--- a/templates/panel_group_edit.html
+++ b/templates/panel_group_edit.html
@@ -4,7 +4,7 @@
 <main class="colstack_right">
 {{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
+		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}} - #{{.ID}}</h1></div>
 	</div>
 	<div id="panel_group" class="colstack_item the_form">
 		<form action="/panel/groups/edit/submit/{{.ID}}?s={{.CurrentUser.Session}}" method="post">
