--- a/templates/convo.html
+++ b/templates/convo.html
@@ -10,7 +10,7 @@
 	</div>
 </div>
 <div class="colstack_item convo_row_box">{{template "convo_row.html" .}}</div>
-{{if not .CurrentUser.IsBanned}}
+{{if .CanReply}}
 <form action="/user/convo/create/submit/{{.Convo.ID}}?s={{.CurrentUser.Session}}" method="post">
 	<div class="colstack_item topic_reply_form" style="border-top:none;">
 		<div class="formrow">
