--- a/themes/nox/public/convo.css
+++ b/themes/nox/public/convo.css
@@ -8,6 +8,23 @@
 .close_form {
 	margin-left: 8px;
 }
+.convos_list .to_left {
+	display: flex;
+}
+.convos_list .rowitem img {
+	width: 24px;
+	height: 24px;
+	margin-right: 8px;
+	border-radius: 24px;
+}
+.convos_list .rowitem a {
+	/*margin-top: auto;
+	margin-bottom: auto;*/
+}
+.convos_list .to_right {
+	margin-top: auto;
+	margin-bottom: auto;
+}
 .convos_item_user:not(:last-child):after {
 	content: ",";
 }
