stop breaking search and filter items onto multiple lines on nox

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -248,6 +248,7 @@ li a {
 	color: #BBBBBB;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	white-space: nowrap;
 }
 .colstack_right .colstack_item:not(.colstack_head):not(.rowhead) .rowitem:not(:last-child), .rowmsg {
 	margin-bottom: 8px;
