--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -258,12 +258,12 @@ li a {
 }
 
 h1, h2, h3, h4, h5 {
-	-webkit-margin-before: 0;
-	-webkit-margin-after: 0;
-	margin-block-start: 0;
-	margin-block-end: 0;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
+	margin-block-start:0;
+	margin-block-end:0;
+	margin-top:0;
+	margin-bottom:0;
 	font-weight: normal;
 	white-space: nowrap;
 }
