--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -163,7 +163,6 @@ a {
 .rowblock:not(.opthead):not(.colstack_head):not(.rowhead) .rowitem {
 	font-size: 15px; /*16px*/
 }
-
 .rowblock:last-child, .colstack_item:last-child {
 	padding-bottom: 10px;
 }
@@ -179,12 +178,12 @@ a {
 	display: inline;
 }
 h1, h2, h3, h4, h5 {
-	-webkit-margin-before: 0;
-	-webkit-margin-after: 0;
-	margin-block-start: 0;
-	margin-block-end: 0;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
+	margin-block-start:0;
+	margin-block-end:0;
+	margin-top:0;
+	margin-bottom:0;
 	font-weight: normal;
 }
 .rowsmall {
